--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,20 @@
     </properties>
     
     <dependencies>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.1</version>
+            <scope>test</scope>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
